@@ -526,7 +526,7 @@ class TestRDocMarkupToHtml < RDoc::Markup::FormatterTestCase
   end
 
   def test_convert_TIDYLINK_nested
-    result = @to.convert '{{image}[path/to/image.jpg}}[http://example.com]'
+    result = @to.convert '{{image}[path/to/image.jpg]}[http://example.com]'
 
     expected =
       '<p><a href="http://example.com"><img src="http://path/to/image.jpg" /></a>'
